--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div>
   </form>
 
-  <script src='/bower_components/pebble-slate/dist/js/slate.min.js'></script>
-  <script src='/js/main.js'></script>
+  <script src='bower_components/pebble-slate/dist/js/slate.min.js'></script>
+  <script src='js/main.js'></script>
 </body>
 </html>
