modified default settings

--- a/settings.html
+++ b/settings.html
@@ -92,11 +92,11 @@
         </label>
         <label class="item">
           Display Hour Markers
-          <input id="displayHourMarkers" type="checkbox" class="item-checkbox" name="displayhourmarkers">
+          <input id="displayHourMarkers" type="checkbox" class="item-checkbox" name="displayhourmarkers" checked>
         </label>
         <label class="item">
           Display Minor Markers
-          <input id="displayMinorMarkers" type="checkbox" class="item-checkbox" name="displayminormarkers">
+          <input id="displayMinorMarkers" type="checkbox" class="item-checkbox" name="displayminormarkers" checked>
         </label>
         <label class="item">
           Display Observation Time (O)
