--- a/settings.html
+++ b/settings.html
@@ -75,7 +75,7 @@
       <div class="item-container-header">Weather Update Frequency (Minutes)</div>
       <div class="item-container-content">
         <label class="item">
-          <input id="frequencySlider" type="range" class="item-slider" name="sliderfreq" value="60">
+          <input type="range" class="item-slider" name="sliderfreq" value="60">
           <div class="item-input-wrapper item-slider-text">
             <input id="frequency" type="text" class="item-input" name="sliderfreq" value="60">
           </div>
