added options for vibrate on bluetooth connect / disconnect

--- a/settings.html
+++ b/settings.html
@@ -148,6 +148,22 @@
       </div>
     </div>
 
+    <span id='connectionSettings'>
+    <div class="item-container">
+      <div class="item-container-header">Bluetooth Connection</div>
+      <div class="item-container-content">
+        <label class="item">
+          Vibrate on Disconnect
+          <input id="vibrateBtDisconnect" type="checkbox" class="item-checkbox" name="vibrateBtDisconnect">
+        </label>
+        <label class="item">
+          Vibrate on Reconnect
+          <input id="vibrateBtReconnect" type="checkbox" class="item-checkbox" name="vibrateBtReconnect">
+        </label>
+      </div>
+    </div>
+  </span>
+
     <div class="item-container">
       <div class="button-container">
         <input id="submitButton2" type="button" class="item-button" value="SEND">
