added option invert on bluetooth disconnect (Aplite only)

--- a/settings.html
+++ b/settings.html
@@ -152,6 +152,12 @@
     <div class="item-container">
       <div class="item-container-header">Bluetooth Connection</div>
       <div class="item-container-content">
+        <span id='InvertOnDisconnect'>
+          <label class="item">
+            Invert Colors on Disconnect
+            <input id="invertBtDisconnect" type="checkbox" class="item-checkbox" name="invertBtDisconnect">
+          </label>
+        </span>
         <label class="item">
           Vibrate on Disconnect
           <input id="vibrateBtDisconnect" type="checkbox" class="item-checkbox" name="vibrateBtDisconnect">
