new: option to display current temperature

--- a/settings.html
+++ b/settings.html
@@ -106,6 +106,16 @@
           Display Update Time (U)
           <input id="displayUpdateTime" type="checkbox" class="item-checkbox" name="displayupdtime">
         </label>
+        <span id="displayTemp">
+          <label class="item">
+            Display Current Temperature (°C)
+            <input id="displayTempC" type="checkbox" class="item-checkbox" name="displaytempc">
+          </label>
+          <label class="item">
+            Display Current Temperature (°F)
+            <input id="displayTempF" type="checkbox" class="item-checkbox" name="displaytempf">
+          </label>
+        </span>
       </div>
     </div>
 
