--- a/settings.html
+++ b/settings.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="ui-mobile" lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+	<meta http-equiv="EXPIRES" content="0"/>
+	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0" name="viewport">
+  <title>WeatherWatch Analog</title>
   <link rel='stylesheet' type='text/css' href='bower_components/pebble-slate/dist/css/slate.min.css'>
   <link rel='stylesheet' type='text/css' href='css/style.css'>
 </head>
