replaced settings content with an update note.

--- a/settings.html
+++ b/settings.html
@@ -23,6 +23,22 @@
     <div class="item-container">
       <div class="item-container-content">
         <div class="item">
+          <p>
+            This watch face used the Weather Underground API which isn't available anymore.
+          </p>
+          <p>
+              There is an update that uses the Dark Sky API: <a href="https://github.com/pbhgl/aww1/blob/master/pbw/aww1_1.16.pbw">AWW1 - Analog Weather Watch</a>.
+          </p>
+          <p>
+              You can sideload it as described <a href="https://www.guidingtech.com/sideload-apps-pebble-smartwatch/">here.</a>
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- <div class="item-container">
+      <div class="item-container-content">
+        <div class="item">
           <div class="button-container">
             <input id="submitButton" type="button" class="item-button" value="SEND">
           </div>
@@ -130,16 +146,9 @@
           </div>
         </label>
       </div>
-    </div>
-
-    <!-- <div id="selectTapActions" class="item-container">
-      <div id='headerTapActions' class="item-container-header">Tap Actions</div>
-      <div id='contentTapActions' class="item-container-content">
-        later: tapActions here
-      </div>
     </div> -->
 
-    <div id="weatherAlerts" class="item-container">
+    <!-- <div id="weatherAlerts" class="item-container">
       <div id='headerAlerts' class="item-container-header">Weather Alerts</div>
       <div class="item-container-footer">
         Weather alerts are available for Europe and US.
@@ -250,7 +259,7 @@
         <img style="width:4.5cm;" src="images/wundergroundLogo_4c_horz.png">
       </div>
     </div>
-  </div>
+  </div> -->
 
   <script src='bower_components/pebble-slate/dist/js/slate.min.js'></script>
   <script src='js/main.js'></script>
