--- a/settings.html
+++ b/settings.html
@@ -25,12 +25,20 @@
         <div class="item">
           <p>
             This watch face used the Weather Underground API which isn't available anymore.
+            <br><br>
           </p>
           <p>
-              There is an update that uses the Dark Sky API: <a href="https://github.com/pbhgl/aww1/blob/master/pbw/aww1_1.16.pbw">AWW1 - Analog Weather Watch</a>.
+              There is an update that uses the Dark Sky API:
           </p>
           <p>
-              You can sideload it as described <a href="https://www.guidingtech.com/sideload-apps-pebble-smartwatch/">here.</a>
+              https://github.com/pbhgl/aww1/blob/master/pbw/aww1_1.16.pbw
+              <br><br>
+          </p>
+          <p>
+              You can sideload it as described here:
+            </p>
+            <p>
+              https://www.guidingtech.com/sideload-apps-pebble-smartwatch/
           </p>
         </div>
       </div>
