--- a/settings.html
+++ b/settings.html
@@ -13,12 +13,13 @@
 
   <p>
     This watch face used the Weather Underground API which isn't available anymore.
+    <br><br>
   </p>
   <p>
-      There is an update that uses the Dark Sky API: <a href="https://github.com/pbhgl/aww1/blob/master/pbw/aww1_1.16.pbw?raw=true">AWW1 - Analog Weather Watch</a>.
+      There is an update that uses the Dark Sky API. More info here:
   </p>
   <p>
-      You can sideload it as described <a href="https://www.guidingtech.com/sideload-apps-pebble-smartwatch/">here</a>.
+      https://github.com/pbhgl/weatherwatch/
   </p>
 
 </body>
