--- a/settings.html
+++ b/settings.html
@@ -9,14 +9,13 @@
 </head>
 <body>
 
-  <h1 class='title'>WeatherWatch</h1>
+  <h1 class='title'>AWW1 Analog WeatherWatch</h1>
 
   <p>
     This watch face used the Weather Underground API which isn't available anymore.
-    <br><br>
   </p>
   <p>
-      There is an update that uses the Dark Sky API. More info here:
+      There is an update available that uses the Dark Sky API. More info here:
   </p>
   <p>
       https://github.com/pbhgl/weatherwatch/
